Countdown demo.Compare source code of SDK 25 and SDK 26.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AndroidNoteDemo</string>
+    <string name="input_time_length_s">input time length(s)</string>
+    <string name="source_code_url">https://github.com/DawnYu9/AndroidNoteDemo/tree/master/app/src/main/java/cn/dawnyu/demo/androidnotedemo</string>
+    <string name="see_code">see source code on github</string>
 </resources>
