--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">AndroidNoteDemo</string>
     <string name="input_time_length_s">input time length(s)</string>
     <string name="source_code_url">https://github.com/DawnYu9/AndroidNoteDemo/tree/master/app/src/main/java/cn/dawnyu/demo/androidnotedemo</string>
+    <string name="github_repo_url">https://github.com/DawnYu9/AndroidNoteDemo</string>
     <string name="see_code">see source code on github</string>
 </resources>
